--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -1,6 +1,7 @@
 ---
-layout: post  
-title: Raspberry Pi. Day 1  
+layout: post
+title: Raspberry Pi. Day 3
+published: true
 ---
 
 Unpackning Paspberry Pi 3  
@@ -27,5 +28,3 @@ in /boot/config.txt add line:
       ssid="your_wifi_network"
 	    psk="your_wifi_password"
     }
-  
-  
