--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -4,27 +4,16 @@ title: Raspberry Pi. Day 3
 published: true
 ---
 
-Unpackning Paspberry Pi 3  
-1) Prepare SD card, write f.ex. Rasbian OS image  
-
-2) USB UART calbe for DEBUG console  
-* To use USB UART TTL cable you need to enable UART interface   
-in /boot/config.txt add line:  
+Docker running containers:  
+```$ docker ps  
   
-    enable_uart=1
-
-* Check your cable connection wires: Gnd-black, Rx-green, Tx-white (green and white might be swapped!) 
-* Connect via Putty to COMx port (UART cable appears as COMx in PC): 115200, user pi, password raspberry
-* Reboot RPi after connection or push some keys to see something on the console screen
-
-3) Setup wi-fi manualy, set dhcp settings  
-/etc/wpa_supplicant/wpa_supplicant.conf  
+Docker stopped containers:  
+```$ docker ps -a  
   
-    ctrl_interface=/var/run/wpa_supplicant
-    ctrl_interface_group=0
-    update_config=1
-    
-    network={
-      ssid="your_wifi_network"
-	    psk="your_wifi_password"
-    }
+Apache Bench load tests:  
+  
+```$ cd /cygdrive/c/Tools/apache/bin/
+  
+```$ ./ab -n300 -c1 http://192.168.0.10:8080/	 
+```$ ./ab -n300 -c1 http://192.168.0.10:80/	 
+
