--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -4,18 +4,26 @@ title: Raspberry Pi. Day 3
 published: true
 ---
 
-Docker running containers:  
+SETUP Rubbit-MQ with Docker (x86, RPi)  
+  
+Docker image for x68 (dockerhub.com): rabbitmq  
+Docs, how to: [https://hub.docker.com/_/rabbitmq/]  
+  
+Docker image for RPi (dockerhub.com): sysrun/rpi-rabbitmq  
+  
+To pull the image and run container on RPi:  
+$ docker run -d --hostname rpi-rabbit --name rabbit1 -p 8090:15672 sysrun/rpi-rabbitmq  
+  
+So, you can open Rabbit-MQ management webUI: http://<RPi_docker_host>:8090/  
 
-	$ docker ps  
-  
-Docker stopped containers:  
+...
 
-	$ docker ps -a  
-  
-Apache Bench load tests:  
-  
-	$ cd /cygdrive/c/Tools/apache/bin/
-  
-	$ ./ab -n300 -c1 http://192.168.0.10:8080/	 
-	$ ./ab -n300 -c1 http://192.168.0.10:80/	 
 
+### Blog on aepetelib.github.io/<blog_name>
+* fork any jekyll template from https://jekyllthemes.io
+* set 'gh-pages' as the default branch!
+* check blog online http://<username>.github.io/<blog_name>
+
+My blog created: [http://aepetelin.github.io/tech]
+
+Usefull web site to edit posts online: [http://prose.io]  
