--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -7,23 +7,26 @@ published: true
 SETUP Rubbit-MQ with Docker (x86, RPi)  
   
 Docker image for x68 (dockerhub.com): rabbitmq  
-Docs, how to: [https://hub.docker.com/_/rabbitmq/]  
+Docs, how to: <https://hub.docker.com/_/rabbitmq/>   
   
 Docker image for RPi (dockerhub.com): sysrun/rpi-rabbitmq  
   
 To pull the image and run container on RPi:  
-$ docker run -d --hostname rpi-rabbit --name rabbit1 -p 8090:15672 sysrun/rpi-rabbitmq  
+	$ docker run -d --hostname rpi-rabbit --name rabbit1 -p 8090:15672 sysrun/rpi-rabbitmq  
   
-So, you can open Rabbit-MQ management webUI: http://<RPi_docker_host>:8090/  
+So, you can open Rabbit-MQ management webUI: http://_rpi-docker-host_:8090/  
 
 ...
 
 
-### Blog on aepetelib.github.io/<blog_name>
-* fork any jekyll template from https://jekyllthemes.io
+#### Blog on aepetelib.github.io/_blog-name_
+* fork any jekyll template from <https://jekyllthemes.io>  
 * set 'gh-pages' as the default branch!
-* check blog online http://<username>.github.io/<blog_name>
+* check blog online http://_username_.github.io/_blog-name_
 
-My blog created: [http://aepetelin.github.io/tech]
+My blog created: <http://aepetelin.github.io/tech>  
 
-Usefull web site to edit posts online: [http://prose.io]  
+Usefull web site to edit posts online: <http://prose.io>   
+
+
+
