--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -21,8 +21,8 @@ So, you can open Rabbit-MQ management webUI: http://_rpi-docker-host_:8090/
   
 ...  
    
+Blog on *.github.io  
 
-#### Blog on aepetelib.github.io/_blog-name_
 * fork any jekyll template from <https://jekyllthemes.io>  
 * set 'gh-pages' as the default branch!
 * check blog online http://_username_.github.io/_blog-name_
