--- a/_posts/2016-12-24-rpiday1.md
+++ b/_posts/2016-12-24-rpiday1.md
@@ -27,5 +27,29 @@ in /boot/config.txt add line:
       ssid="your_wifi_network"
 	    psk="your_wifi_password"
     }
-  
+
+Check available networks   
+
+	$ sudo iwlist wlan0 scan | grep ESSID  
+
+Check intefaces  
+
+	$ sudo cat /etc/network/interfaces
+	$ sudo ifgonfig  
+
+Check connections  
+
+	$ sudo iwconfig  
+	
+Restart network interface  
+
+	$ sudo ifdown wlan0  
+	$ sudo ifup wlan0  
+
+4) Run docker container with GPIO access requires --privileged option    
+
+	$ docker run -t --privileged \<imagename\>  
+
+
+
   
