--- a/_posts/2016-12-24-rpiday1.md
+++ b/_posts/2016-12-24-rpiday1.md
@@ -48,7 +48,7 @@ Restart network interface
 
 4) Run docker container with GPIO access requires --privileged option    
 
-	$ docker run -t --privileged \<imagename\>  
+	$ docker run -t --privileged <imagename>  
 
 
 
