--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -1,35 +1,22 @@
 ---
 layout: post
-title: Raspberry Pi. Day 3
+title: Raspberry Pi. Day 4
 published: true
 ---
 
-SETUP Rubbit-MQ with Docker (x86, RPi)  
-  
-Docker image for x68 (dockerhub.com): rabbitmq  
-Docs, how to: <https://hub.docker.com/_/rabbitmq/>   
-  
-Docker image for RPi (dockerhub.com): sysrun/rpi-rabbitmq  
-  
-To pull the image and run container on RPi:    
-  
-	$ docker run -d --hostname rpi-rabbit --name rabbit1 -p 8090:15672 sysrun/rpi-rabbitmq    
-    
-So, you can open Rabbit-MQ management webUI: http://_rpi-docker-host_:8090/  
-  
-...  
-  
-...  
-   
-Blog on *.github.io  
+### Using github and jekyll to publish posts  
+Clone repository for ssh   
+	$ git clone git@github.com:aepetelin/tech  
 
-* fork any jekyll template from <https://jekyllthemes.io>  
-* set 'gh-pages' as the default branch!
-* check blog online http://_username_.github.io/_blog-name_
+You may setup url later if the repository was pulled via http   
+	$ git remote set-url origin git@github.com:aepetelin/tech  
 
-My blog created: <http://aepetelin.github.io/tech>  
-
-Usefull web site to edit posts online: <http://prose.io>   
+Script to publish posts   
+	
+	#!/bin/bash  
+	git add --all
+	git commit -m "."  
+	git push origin  
 
 
 
