--- a/_posts/2016-12-24-rpiday1.md
+++ b/_posts/2016-12-24-rpiday1.md
@@ -50,6 +50,10 @@ Restart network interface
 
 	$ docker run -t --privileged <imagename>  
 
+5) Connect to RPi  
+
+	$ ssh pi@192.168.0.10
+
 
 
   
