--- a/_posts/2016-12-25-rpiday2.md
+++ b/_posts/2016-12-25-rpiday2.md
@@ -11,9 +11,26 @@ Docker running containers:
 Docker stopped containers:  
 
 	$ docker ps -a  
+
+Don't forget to set ports forwarding -p option then run new container  
+
+	$ run --name mybuild -p 8080:8080 -it docker-image -v host-folder:mount-folder  
+	
+Docker image with oracle java jdk8 for RPi (333MB):   
+hypriot/rpi-java  
   
+Sample docker image with tiny web server for RPi 3MB:  
+hypriot/rpi-busybox-httpd  
+
+Docker image without java for RPi (117MB):  
+resin/rpi-raspbian  
+
 Apache Bench load tests:  
-  
+
+Install apache/apache-utills to cygwin:  
+* download zip file portable apache
+* may copy necessary tools to f.ex. /usr/bin/
+
 	$ cd /cygdrive/c/Tools/apache/bin/
   
 	$ ./ab -n300 -c1 http://192.168.0.10:8080/	 
