--- a/_posts/2016-12-24-rpiday1.md
+++ b/_posts/2016-12-24-rpiday1.md
@@ -54,6 +54,11 @@ Restart network interface
 
 	$ ssh pi@192.168.0.10
 
+6) Example of simple python code to control RPi GPIO  
+<../examples/rpi/hw.py>  
+hw.py(../examples/rpi/hw.py)  
+
+
 
 
   
