--- a/_posts/2016-12-25-rpiday2.md
+++ b/_posts/2016-12-25-rpiday2.md
@@ -14,7 +14,7 @@ Docker stopped containers:
 
 Don't forget to set ports forwarding -p option then run new container  
 
-	$ run --name mybuild -p 8080:8080 -it docker-image -v host-folder:mount-folder  
+	$ docker run --name mybuild -p 8080:8080 -it docker-image -v host-folder:mount-folder  
 	
 Docker image with oracle java jdk8 for RPi (333MB):   
 hypriot/rpi-java  
