--- a/_posts/2016-12-24-rpiday1.md
+++ b/_posts/2016-12-24-rpiday1.md
@@ -56,7 +56,7 @@ Restart network interface
 
 6) Example of simple python code to control RPi GPIO  
 
-[examples/rpi/hhw.py](https://github.com/aepetelin/tech/blob/gh-pages/examples/rpi/hw.py)   
+[examples/rpi/hw.py](https://github.com/aepetelin/tech/blob/gh-pages/examples/rpi/hw.py)   
    
 
 
