--- a/_posts/2016-12-26-rpiday3.md
+++ b/_posts/2016-12-26-rpiday3.md
@@ -15,8 +15,12 @@ To pull the image and run container on RPi:
   
 	$ docker run -d --hostname rpi-rabbit --name rabbit1 -p 8090:15672 sysrun/rpi-rabbitmq    
     
-So, you can open Rabbit-MQ management webUI: http://_rpi-docker-host_:8090/  
-  
+So, you can open Rabbit-MQ management webUI: http://_rpi-docker-host_:8090/    
+
+[Example of RabbitMQ Delayed Message Exchange в Java Spring Framework](https://habrahabr.ru/post/318118/) 
+
+[Reliable Messaging with RabbitMQ (Video)](https://youtu.be/Dg6k4PR-a6w)  
+
 ...  
   
    
