--- a/_posts/2016-12-27-rpiday4.md
+++ b/_posts/2016-12-27-rpiday4.md
@@ -21,4 +21,11 @@ Script to publish posts
 	git push origin  
 
 
+#### Whay don't we try Flask as a microservice framework for RPi ?!
+
+Docker flask images:  
+
+https://hub.docker.com/r/p0bailey/docker-flask/   
+(Flask demo app served by uwsgi and Nginx, ubuntu 14.04, 188MB)  
+
 
