--- a/_posts/2016-12-27-rpiday4.md
+++ b/_posts/2016-12-27-rpiday4.md
@@ -28,4 +28,14 @@ Docker flask images:
 https://hub.docker.com/r/p0bailey/docker-flask/   
 (Flask demo app served by uwsgi and Nginx, ubuntu 14.04, 188MB)  
 
+https://hub.docker.com/r/jazzdd/alpine-flask/  
+(Alpine OS running Python Flask (with Python 2.7 or 3.5), alpine, 35MB)  
+
+Docs aboout Flask + nginx + ...    
+https://hub.docker.com/r/tiangolo/uwsgi-nginx-flask/   
+
+Worked image for RPi + flask + nginx  
+https://github.com/cseelye/rpi-nginx-uwsgi-flask  
+
+
 
