--- a/_posts/2016-12-27-rpiday4.md
+++ b/_posts/2016-12-27-rpiday4.md
@@ -39,5 +39,8 @@ Worked image for RPi + flask + nginx
 
 <https://github.com/cseelye/rpi-nginx-uwsgi-flask> 
 
+#### Docker Compose   
 
+[Dockerizing Flask With Compose and Machine - From Localhost to the Cloud]
+(https://realpython.com/blog/python/dockerizing-flask-with-compose-and-machine-from-localhost-to-the-cloud)
 
