--- a/_posts/2016-12-27-rpiday4.md
+++ b/_posts/2016-12-27-rpiday4.md
@@ -1,17 +1,46 @@
 ---
 layout: post
-title: RPi + Microservice. Day 5
+title: Raspberry Pi. Day 4
 published: true
 ---
 
-#### Python Full Stack ...   
+### Using github and jekyll to publish posts  
+Clone repository for ssh   
 
-* [Microservices](https://www.fullstackpython.com/microservices.html)  
-* [API Creation](https://www.fullstackpython.com/api-creation.html)   
+	$ git clone git@github.com:aepetelin/tech  
+
+You may setup url later if the repository was pulled via http   
+
+	$ git remote set-url origin git@github.com:aepetelin/tech  
+
+Script to publish posts   
+	
+	#!/bin/bash  
+	git add --all
+	git commit -m "."  
+	git push origin  
 
 
+#### Whay don't we try Flask as a microservice framework for RPi ?!
 
-[Django REST framework 3.0](http://www.django-rest-framework.org/topics/3.0-announcement/#django-rest-framework-30)
+Docker flask images:  
 
+https://hub.docker.com/r/p0bailey/docker-flask/   
+(Flask demo app served by uwsgi and Nginx, ubuntu 14.04, 188MB)  
 
+https://hub.docker.com/r/jazzdd/alpine-flask/  
+(Alpine OS running Python Flask (with Python 2.7 or 3.5), alpine, 35MB)  
+
+Docs aboout Flask + nginx + ...    
+
+<https://hub.docker.com/r/tiangolo/uwsgi-nginx-flask>   
+
+Worked image for RPi + flask + nginx  
+
+<https://github.com/cseelye/rpi-nginx-uwsgi-flask> 
+
+#### Docker Compose   
+
+[Dockerizing Flask With Compose and Machine - From Localhost to the Cloud]
+(https://realpython.com/blog/python/dockerizing-flask-with-compose-and-machine-from-localhost-to-the-cloud)
 
