--- a/_posts/2016-12-27-rpiday4.md
+++ b/_posts/2016-12-27-rpiday4.md
@@ -39,8 +39,12 @@ Worked image for RPi + flask + nginx
 
 <https://github.com/cseelye/rpi-nginx-uwsgi-flask> 
 
+[hypriot/rpi-alpine-scratch](https://hub.docker.com/r/hypriot/rpi-alpine-scratch/)   
+
+Raspberry Pi compatible Docker Image with a minimal linux system.
+
+
 #### Docker Compose   
 
-[Dockerizing Flask With Compose and Machine - From Localhost to the Cloud]
-(https://realpython.com/blog/python/dockerizing-flask-with-compose-and-machine-from-localhost-to-the-cloud)
+[Dockerizing Flask With Compose and Machine - From Localhost to the Cloud](https://realpython.com/blog/python/dockerizing-flask-with-compose-and-machine-from-localhost-to-the-cloud)
 
