--- a/_posts/2016-12-28-rpiday5a.md
+++ b/_posts/2016-12-28-rpiday5a.md
@@ -15,6 +15,12 @@ published: true
   
 [Serving Raspberry Pi with Flask](http://mattrichardson.com/Raspberry-Pi-Flask/)   
   
+#### Setup Flask microservice
+My plan   
 
+1. docker rpi-alpine image from Hypriot repository
+2. try install python3 + nginx + ...
+3. make automated image
+...
 
 
