--- a/_posts/2016-12-28-rpiday5a.md
+++ b/_posts/2016-12-28-rpiday5a.md
@@ -23,4 +23,16 @@ My plan
 3. make automated image
 ...
 
+	$ apk add gcc
+	$ apk add python3-dev  
+	$ apk add musl-dev
+	$ pip3 install RPi.GPIO
+
+Manual RPi.GPIO installation (ubuntu):  
+
+	$ wget http://pypi.python.org/packages/source/R/RPi.GPIO/RPi.GPIO-0.3.1a.tar.gz
+	$ tar zxf RPi.GPIO-0.3.1a.tar.gz
+	$ cd RPi.GPIO-0.3.1a
+	$ sudo python3 setup.py install
+
 
