--- a/_posts/2016-12-25-rpiday2.md
+++ b/_posts/2016-12-25-rpiday2.md
@@ -12,6 +12,16 @@ Docker stopped containers:
 
 	$ docker ps -a  
 
+Set Docker to auto-start  
+
+	$ sudo systemctl enable docker
+	$ sudo systemctl start docker
+
+The Docker client can only be used by root or members of the docker group.   
+Add pi or your equivalent user to the docker group:  
+  
+	$ sudo usermod -aG docker pi
+
 Don't forget to set ports forwarding -p option then run new container  
 
 	$ docker run --name mybuild -p 8080:8080 -it docker-image -v host-folder:mount-folder  
