--- a/_posts/2016-12-28-rpiday5a.md
+++ b/_posts/2016-12-28-rpiday5a.md
@@ -28,11 +28,25 @@ My plan
 	$ apk add musl-dev
 	$ pip3 install RPi.GPIO
 
-Manual RPi.GPIO installation (ubuntu):  
+Manual RPi.GPIO installation (ubuntu) JUST A NOTE, didn't do this:  
 
 	$ wget http://pypi.python.org/packages/source/R/RPi.GPIO/RPi.GPIO-0.3.1a.tar.gz
 	$ tar zxf RPi.GPIO-0.3.1a.tar.gz
 	$ cd RPi.GPIO-0.3.1a
 	$ sudo python3 setup.py install
+
+#### WebIOPi   
+The Raspberry Pi Internet of Things Toolkit  
+<http://webiopi.trouch.com/>
+
+#### Setup webserver access to GPIO 
+
+Add this line to entrypoint.sh script!
+
+	$ chgrp www-data /dev/gpiomem 
+
+To che permissions to GPIO /dev/gpiomem:
+
+	ls -l /dev/gpiomem
 
 
