--- a/_posts/2017-05-01-day6.md
+++ b/_posts/2017-05-01-day6.md
@@ -1,1 +1,12 @@
-### Day 6.
+### Networks, virtualbox and RabbitMQ
+
+#### Configuration
+
+##### Windows7 PC
+
+1) Ethernet adapter LAN: eth1, static IP 192.168.0.111, gateway: 192.168.0.2
+2) Wifi LAN: wlan0, dynamic IP, internet access 172.21.46.115, gateway: 172.21.46.1
+ 
+route add 192.168.0.0 mask 255.255.255.0 192.168.0.2
+
+
