--- a/_posts/2017-05-01-day6.md
+++ b/_posts/2017-05-01-day6.md
@@ -10,6 +10,66 @@
  
 	route add 192.168.0.0 mask 255.255.255.0 192.168.0.2   
 
+##### Ubuntu 14.04, Virtualbox VM Oracle 5.12
 
+1) Network adapter1: NAT, eth0    
+2) Network adatper2: Host-only Adapter, eth1, x.x.x.x (dynamic 192.168.0.137)     
+3) Network adapter3: Bridgei Adapter, eth2, set ip to 192.168.0.124 (in command line)    
+    
+	$ sudo ifconfig eth2 192.168.0.124
 
+/etc/network/interfaces:    
+
+	auto lo
+	iface lo inet loopback
+
+	auto eth0
+	iface eth0 inet dhcp
+
+	auto eth1
+	iface eth1 inet dhcp
+
+    
+	$ sudo ipconfig
+
+	docker0   Link encap:Ethernet  HWaddr 02:42:fd:b3:bb:6e
+    	      inet addr:172.17.0.1  Bcast:0.0.0.0  Mask:255.255.0.0
+        	  UP BROADCAST MULTICAST  MTU:1500  Metric:1
+	    	  RX packets:0 errors:0 dropped:0 overruns:0 frame:0
+	    	  TX packets:0 errors:0 dropped:0 overruns:0 carrier:0
+			  collisions:0 txqueuelen:0
+	      	  RX bytes:0 (0.0 B)  TX bytes:0 (0.0 B)
+	eth0      Link encap:Ethernet  HWaddr 08:00:27:97:31:a7
+	          inet addr:10.0.2.15  Bcast:10.0.2.255  Mask:255.255.255.0
+			  inet6 addr: fe80::a00:27ff:fe97:31a7/64 Scope:Link
+			  UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+			  RX packets:65 errors:0 dropped:0 overruns:0 frame:0
+	   		  TX packets:74 errors:0 dropped:0 overruns:0 carrier:0
+		      collisions:0 txqueuelen:1000
+	          RX bytes:7068 (7.0 KB)  TX bytes:6950 (6.9 KB)
+	eth1      Link encap:Ethernet  HWaddr 08:00:27:49:cf:20
+	          inet addr:192.168.0.137  Bcast:192.168.0.255  Mask:255.255.255.0
+	 	      inet6 addr: fe80::a00:27ff:fe49:cf20/64 Scope:Link
+	          UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+	          RX packets:2640 errors:0 dropped:0 overruns:0 frame:0
+	          TX packets:2600 errors:0 dropped:0 overruns:0 carrier:0
+	          collisions:0 txqueuelen:1000
+	          RX bytes:174767 (174.7 KB)  TX bytes:149619 (149.6 KB)
+	          Interrupt:17 Base address:0xd260
+	eth2      Link encap:Ethernet  HWaddr 08:00:27:74:89:5e
+	          inet addr:192.168.0.124  Bcast:192.168.0.255  Mask:255.255.255.0
+	          inet6 addr: fe80::a00:27ff:fe74:895e/64 Scope:Link
+	          UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+	          RX packets:25 errors:0 dropped:0 overruns:0 frame:0
+	          TX packets:8 errors:0 dropped:0 overruns:0 carrier:0
+	          collisions:0 txqueuelen:1000
+	          RX bytes:2934 (2.9 KB)  TX bytes:648 (648.0 B)
+	lo        Link encap:Local Loopback
+	          inet addr:127.0.0.1  Mask:255.0.0.0
+	          inet6 addr: ::1/128 Scope:Host
+	          UP LOOPBACK RUNNING  MTU:65536  Metric:1
+	          RX packets:0 errors:0 dropped:0 overruns:0 frame:0
+	          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0
+	          collisions:0 txqueuelen:0
+	          RX bytes:0 (0.0 B)  TX bytes:0 (0.0 B)
 
