--- a/_posts/2017-05-01-day6.md
+++ b/_posts/2017-05-01-day6.md
@@ -1,15 +1,26 @@
-### Networks, virtualbox and RabbitMQ
+---
+layyout: post
+title: Networks, virtualbox and RabbitM. Day 6 
+published: true
+---
 
 #### Configuration
 
 ##### Windows7 PC
 
 1) Ethernet adapter LAN: eth1, static IP 192.168.0.111, gateway: 192.168.0.2  
-
 2) Wifi LAN: wlan0, dynamic IP, internet access 172.21.46.115, gateway: 172.21.46.1  
  
 	route add 192.168.0.0 mask 255.255.255.0 192.168.0.2   
 
+##### Dlink Gateway
+   
+1) 192.168.0.2    
+  
+##### Raspberry Pi
+
+IP: 192.168.0.124, SSH user: pi, pwd: raspberry
+  
 ##### Ubuntu 14.04, Virtualbox VM Oracle 5.12
 
 1) Network adapter1: NAT, eth0    
