--- a/_posts/2017-01-10-day7.md
+++ b/_posts/2017-01-10-day7.md
@@ -7,27 +7,29 @@ published: true
 #### Configuration
 
 server: 172.30.46.111  
+server name: srv1.flab.lan
 local network: flab.lan  
 forward DNS: 8.8.8.8  
 
-For computers in LAN:   
-* ip4 settings: auto DHCP  
-	- ip address: 172.28.1.xxx
-	- mask: 255.255.255.0	
-	- primary DNS server: 172.30.46.111 
-	- default gateway 172.28.1.1
+For computers in LAN:  
+
+* ip4 settings: auto DHCP    
+	- ip address: 172.28.1.xxx  
+	- mask: 255.255.255.0	  
+	- primary DNS server: 172.30.46.111      
+	- default gateway 172.28.1.1    
 
 #### Install local DNS server BIND
 
-	sudo apt-get update
+	$ sudo apt-get update
 
-	sudo apt-get install bind9
+	$ sudo apt-get install bind9
 
 #### Configure BIND  
 
 On 172.30.46.111 linux server:
 
-	sudo vim /etc/resolv.conf 
+	$ sudo vim /etc/resolv.conf 
 	
 set only these lines:  
 
@@ -35,7 +37,9 @@ set only these lines:
 	search flab.lan  
 	nameserver 127.0.0.1  
 
-	sudo vim /etc/bind/named.conf.options
+Set dns address and forwarding servers:
+
+	$ sudo vim /etc/bind/named.conf.options
 
 Add lines:  
 
@@ -52,7 +56,7 @@ Add lines:
 
 Setup local zone:  
 
-	sudo vim /etc/bind/named.conf.local
+	$ sudo vim /etc/bind/named.conf.local
 
 Add lines for your "flab.lan" network:  
 
@@ -66,7 +70,71 @@ Add lines for your "flab.lan" network:
 	  file "/etc/bind/db.10";
 	};
 
+Setting zone config:    
 
+	$ sudo vim /etc/bind/db.flab.lan
+
+
+	$TTL    604800
+	@       IN      SOA     srv1.flab.lan. root.srv1.flab.lan. (
+							201701091       ; Serial
+							 604800         ; Refresh
+							  86400         ; Retry
+							2419200         ; Expire
+							 604800 )       ; Negative Cache TTL
+	;
+	@       IN      NS      srv1.flab.lan.
+	@       IN      A       127.0.0.1
+	@       IN      AAAA    ::1
+	srv1            IN      A       172.30.46.111
+	rabbitmq1       IN      A       172.30.46.111
+
+
+
+BIND reverse data file for local loopback interface
+	
+	$ sudo vim /etc/bind/db.10     
+       
+
+	$TTL    604800
+	@       IN      SOA     srv1.flab.lan. root.srv1.flab.lan. (
+		                    201701091       ; Serial
+		                     604800         ; Refresh
+ 		                      86400         ; Retry
+	                        2419200         ; Expire
+                           604800 )       ; Negative Cache TTL
+	;
+	@       IN      NS      srv1.
+	111     IN      PTR     srv1.flab.lan.
+	111     IN      PTR     rabbitmq1.flab.lan
+
+
+##### Helpers
+
+Restart DNS server:   
+
+	$ sudo /etc/init.d/bind9 restart
+
+
+Check last lines from system config:   
+
+	$ tail -f /var/log/syslog | grep <process_name>
+
+Check if local DNS works:
+
+	$ dig ubuntu.com
+	$ nslookup www.google.com
+	$ nslookup rabbitmq1.flab.lan
+
+##### Sources 
+1) How to Install and Configure DNS Server in Linux     
+<http://www.thegeekstuff.com/2014/01/install-dns-server/>   
+    
+2) How To Configure BIND as a Private Network DNS Server on Ubuntu 14.04    
+<https://www.digitalocean.com/community/tutorials/how-to-configure-bind-as-a-private-network-dns-server-on-ubuntu-14-04>
+
+3) How To Set Up Linux DNS Services       
+<http://www.aboutdebian.com/dns.htm>
 
 
 
