--- a/_posts/2017-01-10-day7.md
+++ b/_posts/2017-01-10-day7.md
@@ -19,11 +19,13 @@ For computers in LAN:
 	- primary DNS server: 172.30.46.111      
 	- default gateway 172.28.1.1    
 
+
 #### Install local DNS server BIND
 
 	$ sudo apt-get update
 
 	$ sudo apt-get install bind9
+
 
 #### Configure BIND  
 
@@ -109,7 +111,7 @@ BIND reverse data file for local loopback interface
 	111     IN      PTR     rabbitmq1.flab.lan
 
 
-##### Helpers
+#### Helpers
 
 Restart DNS server:   
 
@@ -126,7 +128,8 @@ Check if local DNS works:
 	$ nslookup www.google.com
 	$ nslookup rabbitmq1.flab.lan
 
-##### Sources 
+
+#### Sources 
 1) How to Install and Configure DNS Server in Linux     
 <http://www.thegeekstuff.com/2014/01/install-dns-server/>   
     
