--- a/_posts/2017-07-11-day11.md
+++ b/_posts/2017-07-11-day11.md
@@ -4,7 +4,30 @@ title: Continuous Integration and Delivery. Day 11
 published: true
 ---
 
-### Tips
+# Tips
 
-##### Install GitLab ci multi runner (Linux / Raspbery Pi)
-[Manual installation and configuration on GNU/Linux](https://gitlab.com/gitlab-org/gitlab-ci-multi-runner/blob/master/docs/install/linux-manually.md)
+#### Install Python 2.7 + Pip
+
+	apt-get install python
+	apt-get install python-pip
+
+
+
+#### Install GitLab ci multi runner (Linux / Raspbery Pi)
+  
+* [Manual installation and configuration on GNU/Linux](https://gitlab.com/gitlab-org/gitlab-ci-multi-runner/blob/master/docs/install/linux-manually.md)
+
+	sudo wget -O /usr/local/bin/gitlab-runner https://gitlab-ci-multi-runner-downloads.s3.amazonaws.com/latest/binaries/gitlab-ci-multi-runner-linux-arm
+	sudo chmod +x /usr/local/bin/gitlab-runner
+	
+	
+	sudo gitlab-runner install --user pi
+	gitlab-runner register
+
+#### Install Robot framework
+
+	python -m pip install robotframework	
+
+
+
+
